--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,6 +2,11 @@
 <script type="text/javascript" src="{{site.baseurl}}/assets/js/materialize.min.js"></script>
 <script src="{{site.baseurl}}/assets/js/init.js"></script>
 </body>
+<script type="text/javascript">
+      var host = "gonsoftware.com";
+      if ((host == window.location.host) && (window.location.protocol != "https:"))
+          window.location.protocol = "https";
+</script>
 <footer class="page-footer">
   <div class="footer-copyright" style="padding-left: 30px">
     <i class="material-icons" style="padding-right:5px">copyright</i><p>2018 Copyright {{ site.name }} | All rights reserved</p>
