--- a/_includes/head.html
+++ b/_includes/head.html
@@ -27,4 +27,8 @@
             height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <!-- End Google Tag Manager (noscript) -->
       {% endif %}
-
+<script type="text/javascript">
+      var host = "gonsoftware.com";
+      if ((host == window.location.host) && (window.location.protocol != "https:"))
+          window.location.protocol = "https";
+</script>
