g suite 연동을 위한 meta tag 추가

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,7 +8,8 @@
           {% include google_analytics.html %}
         {% endif %}
       {% endif %}
-
+      <!-- G suite 설정 -->
+	  <meta name="google-site-verification" content="Gz6tLYc8oDgkqxGK24T6_pU_iK6vhRm0h0W7TfrOl2w" />
       <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <link rel="shortcut icon" type="image/x-icon" href="{{site.baseurl}}/assets/images/favicon.ico">
